# TarantoolODBCDriverInstaller

./: .gitignore  CMakeLists.txt  README.md  TarantoolODBCDriverInstaller.sln
LicenseSource/: bsd_license_En.rtf  bsd_license_Ru.rtf
TarantoolODBCDriverBootstrapper/: Bundle.wxs  CMakeLists.txt  FilledVariables.wxi  TarantoolODBCDriverBootstrapper.wixproj  Variables.wxi
TarantoolODBCDriverBootstrapper/Resources/: CustomTheme.xml
TarantoolODBCDriverBootstrapper/Resources/1049/: CustomTheme.wxl
TarantoolODBCDriverInstaller/: CMakeLists.txt  Features.wxs  Files.wxs  FilledVariables.wxi  InstallationComponents.wxs  Product.wxs  StandardUI.wxs  StandardUI_en-US.wxl  StandardUI_ru-RU.wxl  TarantoolODBCDriverInstaller.sln  TarantoolODBCDriverInstaller.wixproj  Variables.wxi  WixUI_CustomMondo.wxs
TarantoolODBCDriverInstaller/Resources/: License.rtf
